data/derived/comb/progs/unify/prog5668.ml.out
Characters 56-57:
  if len == 1 then
            ^
Error: This expression has type int but an expression was expected of type
         'a array -> int
